tests/integration_tests/carddav/snapshots/light_integrations__integration_tests__carddav__addressbook__proppatch_body.snap
---
source: tests/integration_tests/carddav/addressbook.rs
expression: body
---
<?xml version="1.0" encoding="utf-8"?>
<multistatus xmlns="DAV:" xmlns:CAL="urn:ietf:params:xml:ns:caldav" xmlns:CARD="urn:ietf:params:xml:ns:carddav" xmlns:CS="http://calendarserver.org/ns/" xmlns:PUSH="https://bitfire.at/webdav-push">
    <response>
        <href>/carddav/principal/user/contacts</href>
        <propstat>
            <prop>
                <displayname xmlns="DAV:"/>
                <addressbook-description xmlns="urn:ietf:params:xml:ns:carddav"/>
                <addressbook-description/>
            </prop>
            <status>HTTP/1.1 200 OK</status>
        </propstat>
        <propstat>
            <prop>
            </prop>
            <status>HTTP/1.1 404 Not Found</status>
        </propstat>
        <propstat>
            <prop>
            </prop>
            <status>HTTP/1.1 409 Conflict</status>
        </propstat>
    </response>
</multistatus>
